Remove live demo link, for now

--- a/site/_posts/2014-06-10-tools.md
+++ b/site/_posts/2014-06-10-tools.md
@@ -6,20 +6,13 @@ summary:    Proselint-based tools.
 categories: proselint tools
 ---
 
-<tt>proselint</tt> has been integrated into a number of tools:
+<tt>proselint</tt> will be integrated into a number of tools.
 
 ## Sublime Text plugin
-<tt>proselint</tt> is available as a Sublime Text plugin.
-
-## Email autoresponder
-Send an email to <tt>editor@proselint.com</tt>, or CC the address on an email to someone else. We'll respond with a list of comments based on the linter's output.
-
-## Live web editor
-You can play with <tt>proselint</tt> using our <a href="/write">live web editor</a>.
+<tt>proselint</tt> is available as a Sublime Text plugin the main Github repo.
 
 ## The web API.
 There is a web API, but we haven't released it yet.
-
 
 <hr/>
 
